// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton The values of the radio input should be updated when props are passed in should render correctly 1`] = `
<Radio
  checked={false}
  onChange={[MockFunction]}
  value="true"
>
  <div
    aria-checked={false}
    className="radio"
    role="radio"
    tabIndex={0}
  >
    <input
      checked={false}
      className="radio__input"
      key="true"
      onClick={[MockFunction]}
      onKeyPress={[MockFunction]}
      readOnly={true}
      type="radio"
      value="true"
    />
  </div>
</Radio>
`;

exports[`RadioButton with snapshots should render correctly 1`] = `
<Radio
  checked={false}
  onChange={null}
>
  <div
    aria-checked={false}
    className="radio"
    role="radio"
    tabIndex={0}
  >
    <input
      checked={false}
      className="radio__input"
      onClick={null}
      onKeyPress={null}
      readOnly={true}
      type="radio"
    />
  </div>
</Radio>
`;
